--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "lidarr",
     "packaging_format": 1,
     "description": {
-        "en": "A music collection manager for Usenet and BitTorrent users.",
-        "fr": "Un gestionnaire de discothèque pour utilisateurs de Usenet et BitTorrent."
+        "en": "Music collection manager for Usenet and BitTorrent users",
+        "fr": "Gestionnaire de discothèque pour utilisateurs de Usenet et BitTorrent"
     },
     "version": "0.8.1.2135~ynh1",
     "url": "https://lidarr.audio",
@@ -20,7 +20,7 @@
         "email": "tituspijean@outlook.com"
     },
     "requirements": {
-        "yunohost": ">= 4.2"
+        "yunohost": ">= 4.3.0"
     },
     "multi_instance": true,
     "services": [
@@ -32,8 +32,7 @@
         "install" : [
             {
                 "name": "domain",
-                "type": "domain",
-                "example": "example.com"
+                "type": "domain"
             },
             {
                 "name": "path",
@@ -43,8 +42,7 @@
             },
             {
                 "name": "admin",
-                "type": "user",
-                "example": "johndoe"
+                "type": "user"
             }
         ]
     }
