--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "admindoc": "https://wiki.servarr.com/Lidarr",
         "code": "https://github.com/Lidarr/Lidarr"
     },
-    "license": "MIT",
+    "license": "GPL-3.0-only",
     "maintainer": {
         "name": "tituspijean",
         "email": "tituspijean@outlook.com"
