--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,7 +9,7 @@ location __PATH__ {
   proxy_no_cache $cookie_session;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection $http_connection;
-  # Allow the Radarr API
+  # Allow the Lidarr API
   location __PATH__/api {
     auth_request off;
     proxy_pass http://127.0.0.1:__PORT____PATH__/api;
